# image-processing

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  commiter.yml  dev-requirements.txt  image_processing.cpp  setup.py
dependecies/: README.md  opencv.sh
include/: base.h  drawing.h  morph_transformations.h  objects.h
src/: drawing.cpp  image_processing.cpp  morph_transformations.cpp  objects.cpp
tests/: test_image_processing.py
