cmake_minimum_required(VERSION 2.8)
project( ImageProcessing )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)
set (CMAKE_CXX_STANDARD 11)
add_executable( ImageProcessing src/image_processing.cpp )
target_link_libraries( ImageProcessing ${OpenCV_LIBS} )
